# Surakarta_Zero_Old

./: ArrayList.cpp  ArrayList.h  CMakeLists.txt  basic.cpp  basic.h  chessboard.cpp  chessboard.h  evaluator.cpp  evaluator.h  game_ai.cpp  game_ai.h  hash_table.cpp  hash_table.h  initialization.cpp  initialization.h  interact.cpp  interact.h  main.cpp  move_generator.cpp  move_generator.h  record.cpp  record.h  run.cpp  run.h  search_engine.cpp  search_engine.h  sort.cpp  sort.h  store.txt  test.cpp  test.h  ui.cpp  ui.h
resource/Data/: testAlphaBeta copy.txt  testAlphaBeta.txt  testAlphaBeta1.txt  testDataSimple0.txt  testDataSimple1.txt  testDataSimple2.txt  testDataSimple3.txt  testDataSimple4.txt  testMoveGenerate.txt
资料/: readme.txt  苏拉卡尔塔博弈系统中评估函数的研究.caj
资料/Surakarta/: Define.cpp  Define.h  Eveluation.cpp  Eveluation.h  MoveGenerator.cpp  NegaScout.cpp  NewGame.cpp  NewGame.h  ReadMe.txt  SearchEngine.h  StartDlg.cpp  Surakarta.clw  Surakarta.dsp  Surakarta.h  Surakarta.ncb  Surakarta.sln  Surakarta.vcxproj.filters  SurakartaDoc.cpp  SurakartaView.h  resource.h
资料/Surakarta 2/: Eveluation.cpp  MainFrm.cpp  MainFrm.h  MoveGenerator.h  NegaScout.h  SearchEngine.cpp  StartDlg.h  StdAfx.cpp  StdAfx.h  Surakarta.cpp  Surakarta.dsw  Surakarta.opt  Surakarta.plg  Surakarta.rc  Surakarta.vcxproj  SurakartaDoc.h  SurakartaView.cpp  UpgradeLog.htm  UpgradeLog2.htm
资料/Surakarta/res/: Surakarta.rc2
资料/苏拉卡尔塔棋打谱软件及使用说明文档/: SU-SU1vsSU2-œ» ÷ §-201802270908.txt  SU-À’1∂”vsÀ’2∂”-∫Û ÷ §-201802140915.txt  À’¿≠ø®∂˚À˛∆Â¥Ú∆◊»Ìº˛Àµ√˜Œƒµµv3.0.docx
(+220 files in other folders)
